# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: python-package.yml
page_analyzer/: __init__.py  app.py  database.py  db.py  parser.py  validator.py
page_analyzer/models/: url.py
page_analyzer/templates/: base.html  checks.html  detail.html  index.html  list.html
page_analyzer/templates/partials/: checks.html  flash.html
